Vertex slide broken #38166

Closed
opened 2014-01-11 22:07:52 +01:00 by Henrik Aarnio · 9 comments

System Information
Operating system and graphics card
Linux 64 bit, although should not matter

Blender Version
Broken:
Latest trunk, 6d6bb2d
Worked:
2.69

Short description of error
New clamp option (shortcut C while using vertex slide) doesn't do anything, it's impossible to toggle it off.
Impossible to slide vertex along the extension of the edge away from the other vert defining the edge.

Ability to select the direction vertex moves is lost, making the workflow very hit and miss and forcing to cancel GG slide or vertex slide often.

**System Information** Operating system and graphics card Linux 64 bit, although should not matter **Blender Version** Broken: Latest trunk, 6d6bb2d Worked: 2.69 **Short description of error** New clamp option (shortcut C while using vertex slide) doesn't do anything, it's impossible to toggle it off. Impossible to slide vertex along the extension of the edge away from the other vert defining the edge. Ability to select the direction vertex moves is lost, making the workflow very hit and miss and forcing to cancel GG slide or vertex slide often.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @hjaarnio

Added subscriber: @hjaarnio

Added subscribers: @ideasman42, @mont29

Added subscribers: @ideasman42, @mont29

As I suspected, the issue is revealed by my changes to how events are handled in transform code (to make modal numinput work).

However, real problem is, the C key is already used by the generic handler (line 1359 of transform.c, to remove any constraint previously set [XYZ keys...]), which means it should never be usable by custom handlers such as done by the vertexslide transform mode (for some reason, it worked before my changes).

@ideasman42 any thoughts? Best solution would be to choose something else than C for vertexslide (and check no other custom handler use it either), imho?

As I suspected, the issue is revealed by my changes to how events are handled in transform code (to make modal numinput work). However, real problem is, the C key is already used by the generic handler (line 1359 of transform.c, to remove any constraint previously set [XYZ keys...]), which means it should never be usable by custom handlers such as done by the vertexslide transform mode (for some reason, it worked before my changes). @ideasman42 any thoughts? Best solution would be to choose something else than C for vertexslide (and check no other custom handler use it either), imho?

This issue was referenced by blender/blender-addons-contrib@e07e8e31bb

This issue was referenced by blender/blender-addons-contrib@e07e8e31bb549ab654e18e6801b41b8919bffb00

This issue was referenced by e07e8e31bb

This issue was referenced by e07e8e31bb549ab654e18e6801b41b8919bffb00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e07e8e31bb.

Closed by commit e07e8e31bb.

PET and Constraints dont apply to vertex slide, Ignore this keybinding unless transform supports it.

PET and Constraints dont apply to vertex slide, Ignore this keybinding unless transform supports it.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38166
No description provided.