Fix T38166: Vertex slide C key doesn't work